# libmpdecpp

./: .clang-format  .travis.yml  CMakeLists.txt  Doxyfile_8doc.html  README.md  README_8md.html  annotated.html  classes.html  classmpdecpp_1_1Decimal-members.html  classmpdecpp_1_1Decimal.html  decimal_8cpp.html  decimal_8cpp__incl.map  decimal_8cpp__incl.md5  decimal_8h.html  decimal_8h__dep__incl.map  decimal_8h__dep__incl.md5  decimal_8h__incl.map  decimal_8h__incl.md5  decimal_8h_source.html  decimalexceptions_8h.html  decimalexceptions_8h__dep__incl.map  decimalexceptions_8h__dep__incl.md5  decimalexceptions_8h__incl.map  decimalexceptions_8h__incl.md5  decimalexceptions_8h_source.html  decimalprivate_8cpp.html  decimalprivate_8cpp__incl.map  decimalprivate_8cpp__incl.md5  decimalprivate_8h.html  decimalprivate_8h__dep__incl.map  decimalprivate_8h__dep__incl.md5  decimalprivate_8h__incl.map  decimalprivate_8h__incl.md5  decimalprivate_8h_source.html  decimaltypes_8h.html  decimaltypes_8h__dep__incl.map  decimaltypes_8h__dep__incl.md5  decimaltypes_8h__incl.map  decimaltypes_8h__incl.md5  decimaltypes_8h_source.html  (+67 more)
.github/workflows/: github-actions.yml
cmake/: LibmpdecppConfig.cmake.in
cmake/Modules/: FindGMock.cmake  FindLibMPDecimal.cmake
doc/: CMakeLists.txt
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+26 more)
src/: CMakeLists.txt  decimal.cpp  decimal.h  decimalexceptions.h  decimalprivate.cpp  decimalprivate.h  decimaltypes.h  errorchecks.h  mpdecimalnamespace.h  mpdecppnamespace.h  operations.cpp  operations.h  roundmode.h  scienfstringconversionformatflag.h
test/: CMakeLists.txt  closest_numbers_test.h  closest_numbers_tests.h  comparision_tests.h  conversion_tests.h  decimalinitenvironment.h  divide_tests.h  init_test.cpp  initialization_tests.h  integral_operation_tests.h  mpdecpp_test.cpp  mpdecpp_uninit_throw_test.cpp  multiplication_tests.h  power_and_logarithms_test.h  quantizing_and_normalizing_test.h  quantizing_and_normalizing_tests.h  round_operation_test.h  round_operation_tests.h  sign_tests.h  subtraction_tests.h  summation_test.h
